# cvxpy

./: .#new_copyright.txt  .#setup.py  .#test.py  .autodiff..swp  .buildinfo  .bumpversion.cfg  .clang-format  .coveragerc  .dockerignore  .git-blame-ignore-revs  .gitignore  .gitmodules  .markdownlint.json  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DIFFENGINE_RELEASE.md  LICENSE  MANIFEST  MANIFEST.in  Makefile  PROCEDURES.md  README.md  __init__.py  add_gpl  appveyor.yml  autodiff.  canon_benchmark.py  chatgpt_imp_plan_20250916.txt  codegen.py  commit_checklist.md  coordinator.py  copyright.txt  (+44 more)
.devcontainer/: devcontainer.json  startup.sh
.github/: pull_request_template.md
.venv-docs/: pyvenv.cfg
_modules/: abc.html  index.html
_sources/: index.rst.txt  index.txt
_static/: documentation_options.js  sphinx_immaterial_theme.96fe8683ff2bd71e9.min.css
api_reference/: cvxpy.atoms.affine.html  cvxpy.atoms.elementwise.html  cvxpy.atoms.html  cvxpy.atoms.other_atoms.html  cvxpy.constraints.html  cvxpy.expressions.html  cvxpy.html  cvxpy.problems.html  cvxpy.reductions.back_end.html  cvxpy.reductions.dcp2cone.html  cvxpy.reductions.html  cvxpy.reductions.middle_end.html  cvxpy.reductions.qp2quad_form.html  cvxpy.transforms.html
atoms/: __init__.py  abs.py  atom.py  geo_mean.py  max.py  monotonicity.py  norm1.py  norm2.py  norm_inf.py  quad_over_lin.py  sqrt.py  square.py  vstack.py
binder/: Dockerfile
book/: _config.xml  _config.yml  _toc.yml
citing/: index.html
community/: index.html
conda-recipe/: build.sh  conda_build_config.yaml  meta.yaml
constraints/: affine.py  constraint.py  second_order.py  semidefinite.py  soc.py
continuous_integration/: appveyor_install.ps1  deploy_script.sh  doc_deploy.py  doc_is_latest.py  doc_write_versions.py  install.sh  install_dependencies.sh  install_optional_solvers.sh  osqp_version.py  success_script.sh  test_script.sh  versiongetter.py
contributing/: index.html
cvxpy/: __init__.py  compat.py  error.py  gp_todo.txt  logic.py  settings.py
cvxpy.egg-info/: PKG-INFO  SOURCES.txt  pbr.json  requires.txt  top_level.txt
cvxpy/utilities/cpp/sparsecholesky_pb/: CMakeLists.txt  __init__.py  main.cpp
cvxpy_rust/: Cargo.toml  README.md  pyproject.toml
cvxpy_rust/src/: lib.rs  linop.rs  matrix_builder.rs  tensor.rs
cvxpy_rust/src/operations/: arithmetic.rs  leaf.rs  mod.rs  specialized.rs  structural.rs
doc/: conf.py  requirements.txt
docs/: .buildinfo  dev_notes.html  genindex.html  make.bat  objects.inv  py-modindex.html  requirements.txt  searchindex.js
examples/: MMCF.ipynb  QI_demo.py  admm_example.py  admm_lasso.py  admm_svm_pool.py  admm_svm_procs.py  branch_and_bound.py  chebyshev.py  chebyshev.py.orig  cheshire_tomography.py  circuits.py  consensus_admm.py  deadzone.py  ex_4_3.py  ex_5_1.py  ex_5_33.py  ex_tr_inv.py  feasibility.py  feature_selection.py  fig6_9.py  floor_packing.py  fmmc.py  image_processing.py  index.html  integer_ls.py  lasso.py  matrix_games_LP.py  max_flow.py  mean-variance.py  mpc.py  mpi_consensus_admm.py  n_dimensional_portfolio.py  norm_approx.py  optimal_control.py  penalty_comp_cvx.py  perspective_example.py  qcqp.py  relax_and_round.py  routing-old-cvxpy.ipynb  routing.ipynb  (+9 more)
experiments/: sdp.py  sdp_canon.pf  sdp_canon_200_300.pf  sdp_canon_o3.pf  sdp_canon_split.pf  sdp_canon_split_12.pf  sdp_canon_split_6.pf  sdp_canon_split_multi.pf  sdp_canon_split_multi_200_300.pf
expressions/: affine.py  coefficients.py  constant.py  containers.py  curvature.py  expression.py  leaf.py  operators.py  parameter.py  shape.py  types.py  variable.py
faq/: index.html
functions/: functions_table.html  index.html
install/: index.html
interface/: base_matrix_interface.py  dense_matrix_interface.py  matrices.py  matrix_utilities.py  numpy_wrapper.py  shapeset.py  sparse_matrix_interface.py
kron_debug_scripts/: explore_kron_canon.py  pure_python_kron_mat.py
license/: index.html
lropt/: pyvenv.cfg
meta-package/: pyproject.toml
notes/: param_notes.text  qcptodo.txt
problems/: objective.py  problem.py
related_projects/: index.html
resources/: index.html
rust_backend/: Cargo.toml  pyproject.toml
rust_backend/.github/workflows/: CI.yml
rust_backend/benches/: benchmarks.rs
rust_backend/src/: backend.rs  faer_ext.rs  lib.rs  linop.rs  tensor_representation.rs  tests.rs  view.rs
rust_benchmarks/: RUST_BACKEND_PERFORMANCE_ANALYSIS.md  benchmark_rust_backend.py  profile_rust_backend.py  quick_benchmark.py
scratch/: benchmark_feasibility_check.py  post_solver_feasibility_design.md  test_ldl_low_rank.py  test_mumps_rank_def.py  test_qdldl_rank_def.py
scratch/faer-ldl/: .gitignore  Cargo.toml  pyproject.toml  test_decomp_quad.py  test_factor.py  test_smoke.py
scratch/faer-ldl/src/: lib.rs
scripts/: compare_labels.py  run_cuopt_socp_examples.py  run_labels_tests_standalone.py
setup/: build_meta.py  cvxcore.py  extensions.py  sparsecholesky.py  versioning.py
setup_helpers/: cvxcore.py  sparsecholesky.py
short_course/: index.html
temp_scripts/: explore_kron_canon.py
tests/: base_test.py  test_affine_objective.py  test_atoms.py  test_benchmarks.py  test_complex.py  test_conic_solvers.py  test_constant_atoms.py  test_constraints.py  test_derivative.py  test_dgp2dcp.py  test_expressions.py  test_grad.py  test_leaf.py  test_linear_cone.py  test_matrices.py  test_mip_vars.py  test_monotonicity.py  test_objectives.py  test_param_quad_prog.py  test_power_tools.py  test_problem.py  test_sign.py  test_valinvec2mixedint.py  test_versioning.py
tmp/: card_ls.py  cvxcore.callgrind  cvxcore.prof  diffcp.prof  diffcp.py  diffcp_lower_tri.prof  doc.py  dpp.py  dq.py  dqcp.py  ecos_bug.txt  exp.py  gen_eig.py  lasso.py  logsumexp.py  loki.py  loki.py.lprof  loki0.py.lprof  loki_total_vectorize.pf  loki_total_vectorize_sd.pf  loki_vectorize.pf  matrix_stuffing_1_1.prof  matrix_stuffing_master.prof  norm.py  prob.py  profiler.py  qcp.py  red.py  segf.py  stuff.prof  time.py  (+13 more)
(+4309 files in other folders)
