[tool.ruff]
# The minimum Python version that should be supported
target-version = "py311"

line-length = 100

extend-exclude = [
    "build",
    "examples",
    "doc",
    "cvxpy/cvxcore/*",
    "*__init__.py"
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "NPY201",
    "W605",  # Check for invalid escape sequences in docstrings (errors in py >= 3.11)
]

ignore = [
    "E721" # Do not compare types, use 'isinstance()'
]


[tool.pytest.ini_options]
testpaths = [
    "cvxpy/tests/"
]

[build-system]
requires = [
    "numpy >= 2.0.0",
    "scipy >= 1.13.0",
    # 68.1.0 Promoted pyproject.toml's [tool.setuptools] out of beta.
    "setuptools >= 68.1.0",
    "wheel",
    "pybind11"
]

# We need access to the 'setup' package at build time.
# Hence we declare a custom build backend.
build-backend = "setup.build_meta"  # just re-exports setuptools.build_meta definitions
backend-path = ["."]

[project]
name = "cvxpy"
description = "A domain-specific language for modeling convex optimization problems in Python."
dependencies = [
    "osqp >= 1.0.0",
    "clarabel >= 0.5.0",
    "scs >= 3.2.4.post1",
    "numpy >= 2.0.0",
    "scipy >= 1.13.0",
]
requires-python = ">=3.11"
urls = {Homepage = "https://github.com/cvxpy/cvxpy"}
license = {text = "Apache License, Version 2.0"}
authors = [{name = "Steven Diamond", email = "stevend2@stanford.edu"},
           {name = "", email = "akshayka@cs.stanford.edu"},
           {name = "Eric Chu", email = "echu508@stanford.edu"},
           {name = "Stephen Boyd", email = "boyd@stanford.edu"}]
dynamic = ["version"]

[project.optional-dependencies]
# Solver names as in cvxpy.settings = pip-installable distribution providing it
CBC = ["cylp>=0.91.5"]
CLARABEL = []
# CUOPT dependency group is disabled since it was breaking uv sync.
# CUOPT = ["cuopt-cu12>=25.5", "nvidia-cuda-runtime-cu12>=12.8,<13.0"]
CVXOPT = ["cvxopt"]
DIFFCP = ["diffcp"]
ECOS = ["ecos"]
ECOS_BB = ["ecos"]
GLOP = ["ortools>=9.7,<9.15"]
GLPK = ["cvxopt"]
GLPK_MI = ["cvxopt"]
GUROBI = ["gurobipy"]
HIGHS = ["highspy"]
MOSEK = ["Mosek"]
OSQP = []
PDLP = ["ortools>=9.7,<9.15"]
PIQP = ["piqp"]
PROXQP = ["proxsuite"]
QOCO = ["qoco"]
QPALM = ["qpalm~=1.2.5"]
SCIP = ["PySCIPOpt"]
SCIPY = ["scipy"]
SCS = []
XPRESS = ["xpress>=9.5"]
DAQP = ["daqp"]
KNITRO = ["knitro"]
MPAX = ["mpax"]
testing = ["pytest", "hypothesis"]
doc = ["sphinx",
       "sphinxcontrib.jquery",
       "sphinx-inline-tabs",
       "sphinx-design",
       "sphinx-immaterial>=0.11.7"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
include-package-data = false
