[options.extras_require]
# Solver names as in cvxpy.settings = pip-installable distribution providing it
CBC = cylp
CVXOPT = cvxopt
DIFFCP = diffcp
DSDP = cvxopt
ECOS =
ECOS_BB =
GLOP = ortools
GLPK = cvxopt
GLPK_MI = cvxopt
GUROBI = gurobipy
HIGHS = scipy>=1.6.1
MOSEK = Mosek
OSQP =
PDLP = ortools
SCIP = PySCIPOpt
SCIPY = scipy
SCS =
SDPT3 = sdpt3glue
XPRESS = xpress

[flake8]
max-line-length=100
exclude=build,examples,doc,cvxpy/cvxcore/*,*__init__.py
