[options.extras_require]
# Solver names as in cvxpy.settings = pip-installable distribution providing it
CBC = cylp>=0.91.5
CVXOPT = cvxopt
DIFFCP = diffcp
ECOS =
ECOS_BB =
GLOP = ortools<9.4
GLPK = cvxopt
GLPK_MI = cvxopt
GUROBI = gurobipy
HIGHS = scipy>=1.6.1
MOSEK = Mosek
OSQP =
PDLP = ortools<9.4
SCIP = PySCIPOpt<4.0.0
SCIPY = scipy
SCS =
XPRESS = xpress

[flake8]
max-line-length=100
exclude=build,examples,doc,cvxpy/cvxcore/*,*__init__.py
