[options.extras_require]
# Solver names as in cvxpy.settings = pip-installable distribution providing it
CBC = cylp>=0.91.5
CLARABEL = clarabel
CVXOPT = cvxopt
DIFFCP = diffcp
ECOS =
ECOS_BB =
GLOP = ortools>=9.3,<9.5
GLPK = cvxopt
GLPK_MI = cvxopt
GUROBI = gurobipy
HIGHS = scipy>=1.6.1
MOSEK = Mosek
OSQP =
PDLP = ortools>=9.3,<9.5
PIQP = piqp
PROXQP = proxsuite
SCIP = PySCIPOpt
SCIPY = scipy
SCS = setuptools>65.5.1
XPRESS = xpress
