# This file is kept for metadata only.
# The actual build is handled by setuptools-rust in the parent cvxpy package.
# For standalone development, use: maturin develop --release

[project]
name = "cvxpy-rust"
version = "0.1.0"
description = "Rust canonicalization backend for CVXPY"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=2.0.0",
]

[tool.maturin]
module-name = "cvxpy_rust"
features = ["pyo3/extension-module"]
